--- a/style/index-style.css
+++ b/style/index-style.css
@@ -1353,6 +1353,14 @@ flex-direction: row;
     margin-bottom: 3rem;
     }
 
+    .gifa {
+    border: 3px solid green;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    height: 450px;
+  }
+
 @media (max-device-width: 430px) {
 
     .firstImage {
