--- a/style/index-style.css
+++ b/style/index-style.css
@@ -402,6 +402,7 @@ motion-text {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding-bottom: 2rem;
 }
 
 .appDesc {
@@ -1474,9 +1475,8 @@ flex-direction: row;
         display: flex;
         align-items: center;
         flex-direction: column;
-        height: 150px;
         margin-top: 1rem;
-        margin-bottom: 1rem;
+        padding-bottom: 1rem;
     }
 
 
